--- a/comms.css
+++ b/comms.css
@@ -1,3 +1,30 @@
 .my_bg_c{
-    background-color: beige
+    background-color: snow;
+    font-size: 0.8rem;
+    color:#A3A3A3;
+}
+.one{
+    margin-left: 10px;
+    float: left;
+    display:inline;
+    width:500px;
+}
+.mt-7{
+    margin-botton:0;
+    padding-bottom:0;
+    text-align:center;
+    color:#A3A3A3;
+}
+#footer{
+    text-align: left;
+    color: #676767;
+    font-size: 10px;
+    margin-top: 15px;
+}
+#footer .ft-coprigyt {
+    float: left;
+}
+#footer .ft-nav {
+    float: right;
+    text-align: left;
 }
