--- a/comms.css
+++ b/comms.css
@@ -3,6 +3,9 @@
     font-size: 0.8rem;
     color:#A3A3A3;
 }
+.my_c{
+    background:rgba(194, 185, 185, 0.6);
+}
 .one{
     margin-left: 10px;
     float: left;
