--- a/comms.css
+++ b/comms.css
@@ -1,33 +1,53 @@
-.my_bg_c{
-    background-color: snow;
-    font-size: 0.8rem;
-    color:#A3A3A3;
+ul{
+    list-style: none;
+    display: block;
+    border: 0;
 }
-.my_c{
-    background:rgba(194, 185, 185, 0.6);
+.top{
+    height: 22px;
+    line-height: 22px;
+    border-bottom: 1px solid #EAEAEA;
+}
+.header{
+    background:#F6F6F6;
+    height: 60px;
+    position: absolute;
+    top: 23px;
+    left: 0;
+    width: 100%;
 }
 .one{
+    margin-top: 7px;
     margin-left: 10px;
     float: left;
-    display:inline;
-    width:500px;
 }
-.mt-7{
-    margin-botton:0;
-    padding-bottom:0;
-    text-align:center;
-    color:#A3A3A3;
+.naver{
+    float: right;
+    height: 24px;
+    line-height: 24px; 
+    margin-top: 24px;
+    margin-right: -15px;
 }
-#footer{
+#footer {
     text-align: left;
+    background: #F6F6F6;
+    border-top: 1px solid #C3C3C3;
     color: #676767;
+    padding: 15px 0 50px 0;
     font-size: 10px;
-    margin-top: 15px;
+}
+div{
+    display:block;
+}
+.wrap {
+    width: 1015px;
+    margin: 0 auto;
+    position: relative;
 }
 #footer .ft-coprigyt {
     float: left;
 }
 #footer .ft-nav {
     float: right;
-    text-align: left;
+    text-align: right;
 }
